[package]
name = "cssparser"
version = "0.25.5"
authors = [ "Simon Sapin <simon.sapin@exyr.org>" ]

description = "Rust implementation of CSS Syntax Level 3"
documentation = "https://docs.rs/cssparser/"
repository = "https://github.com/servo/rust-cssparser"
readme = "README.md"
keywords = ["css", "syntax", "parser"]
license = "MPL-2.0"
build = "build.rs"

exclude = ["src/css-parsing-tests/**", "src/big-data-url.css"]

[dev-dependencies]
rustc-serialize = "0.3"
difference = "2.0"
encoding_rs = "0.8"

[dependencies]
cssparser-macros = {path = "./macros", version = "0.3.3"}
dtoa-short = "0.3"
heapsize = {version = ">= 0.3, < 0.5", optional = true}
itoa = "0.4"
matches = "0.1"
phf = "0.7"
procedural-masquerade = {path = "./procedural-masquerade", version = "0.1"}
serde = {version = "1.0", optional = true}
smallvec = "0.6"

[build-dependencies]
syn = { version = "0.15.12", features = ["extra-traits", "fold", "full"] }
quote = "0.6"
proc-macro2 = "0.4"

[features]
bench = []
dummy_match_byte = []

[workspace]
members = [".", "./macros", "./procedural-masquerade"]
