[package]
name = "cssparser"
version = "0.36.0"
authors = ["Simon Sapin <simon.sapin@exyr.org>"]

description = "Rust implementation of CSS Syntax Level 3"
documentation = "https://docs.rs/cssparser/"
repository = "https://github.com/servo/rust-cssparser"
readme = "README.md"
keywords = ["css", "syntax", "parser"]
license = "MPL-2.0"
edition = "2018"
rust-version = "1.71"

exclude = ["src/css-parsing-tests/**", "src/big-data-url.css"]

[dependencies]
zmij = "1.0.21"
itoa = "1.0"
smallvec = "1.0"

# Optional dependencies
cssparser-macros = { path = "./macros", version = "0.6.1", optional = true }
malloc_size_of = { version = "0.1", default-features = false, optional = true }
phf = { version = "0.13.1", features = ["macros"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0.25"
difference = "2.0"
encoding_rs = "0.8"

[profile.profiling]
inherits = "release"
debug = true

[features]
default = ["fast_match_byte", "fast_match_color"]
bench = []
fast_match_byte = ["dep:cssparser-macros"]
fast_match_color = ["dep:phf"]
# Useful for skipping tests when execution is slow, e.g., under miri
skip_long_tests = []

[workspace]
members = [".", "./macros", "./color"]
