[package]
name = "cssparser-color"
version = "0.1.0"
authors = ["Emilio Cobos Ãlvarez <emilio@crisal.io>"]
description = "Color implementation based on cssparser"
documentation = "https://docs.rs/cssparser-color/"
repository = "https://github.com/servo/rust-cssparser"
license = "MPL-2.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
cssparser = { path = "..", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
libm = "0.2.8"

[features]
default = ["std"]
std = ["cssparser/std", "serde/std"]
serde = ["cssparser/serde", "dep:serde"]

[dev-dependencies]
serde_json = "1.0.25"
difference = "2.0"
encoding_rs = "0.8"
