[package]
name = "cssparser-color"
version = "0.5.0"
authors = ["Emilio Cobos Álvarez <emilio@crisal.io>"]
description = "Color implementation based on cssparser"
documentation = "https://docs.rs/cssparser-color/"
repository = "https://github.com/servo/rust-cssparser"
license = "MPL-2.0"
edition = "2021"
rust-version = "1.71"

[lib]
path = "lib.rs"

[dependencies]
cssparser = { path = "..", version = "0.37", default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = ["cssparser/default"]
serde = ["cssparser/serde", "dep:serde"]

[dev-dependencies]
serde_json = "1.0.25"
difference = "2.0"
encoding_rs = "0.8"
