[package]
name = "cssparser-macros"
version = "0.3.2"
authors = ["Simon Sapin <simon.sapin@exyr.org>"]
description = "Procedural macros for cssparser"
documentation = "https://docs.rs/cssparser-macros/"
repository = "https://github.com/servo/rust-cssparser"
license = "MPL-2.0"

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
procedural-masquerade = {path = "../procedural-masquerade", version = "0.1"}
phf_codegen = "0.7"
quote = "0.5"
syn = {version = "0.13", features = ["full", "extra-traits"]}
proc-macro2 = "0.3"
